unpackaged/main/default/objects/Framework__Spark_Plug_Extension_Point__mdt/Framework__Spark_Plug_Extension_Point__mdt.object-meta.xml
<CustomObject>
    <description>Spark Plug Extension Points define spots where arbitrary screens can be added to Fonteva workflows.</description>
    <label>Spark Plug Extension Point</label>
    <pluralLabel>Spark Plug Extension Points</pluralLabel>
</CustomObject>