unpackaged/main/default/objects/Framework__Spark_Plug_Extension_Point__mdt/fields/Framework__Is_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Framework__Is_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is extension point enabled or not.</description>
    <inlineHelpText>Is extension point enabled or not.</inlineHelpText>
    <label>Extension Point enabled?</label>
    <type>Checkbox</type>
</CustomField>