unpackaged/main/default/objects/Framework__Spark_Plug_Extension_Point__mdt/fields/Framework__Lightning_Component__c.field-meta.xml
<CustomField>
    <fullName>Framework__Lightning_Component__c</fullName>
    <description>Aura component to display in the spark plug interface.</description>
    <inlineHelpText>Aura component to display in the spark plug interface.</inlineHelpText>
    <label>DEPRECATED</label>
    <length>255</length>
    <type>Text</type>
</CustomField>