unpackaged/main/default/objects/Framework__Spark_Plug_Extension_Point__mdt/fields/Framework__Order__c.field-meta.xml
<CustomField>
    <fullName>Framework__Order__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Order of extension if there are multiple for this extension point.</description>
    <inlineHelpText>Order of extension if there are multiple for this extension point.</inlineHelpText>
    <label>DEPRECATED</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>